  Changelog for the c-ares project

* April 9

- Made sortlist support IPv6 (this can probably use some testing).

- Made sortlist support CIDR matching for IPv4.

* April 8

- Added preliminary IPv6 support to ares_gethostbyname. Currently, sortlist
  does not work with IPv6. Also provided an implementation of bitncmp from
  BIND for systems that do not supply this function. This will be used to add
  IPv6 support to sortlist.

- Made ares_gethostbyaddr support IPv6 by specifying AF_INET6 as the family.
  The function can lookup IPv6 addresses both from files (/etc/hosts) and
  DNS lookups.

* April 7

- Tupone Alfredo fixed includes of arpa/nameser_compat.h to build fine on Mac
  OS X.

* April 5

- Dominick Meglio: Provided implementations of inet_net_pton and inet_pton
  from BIND for systems that do not include these functions.

* March 11, 2005

- Dominick Meglio added ares_parse_aaaa_reply.c and did various
  adjustments. The first little steps towards IPv6 support!

* November 7

- Fixed the VC project and makefile to use ares_cancel and ares_version

* October 24

- The released ares_version.h from 1.2.1 says 1.2.0 due to a maketgz flaw.
  This is now fixed.

Version 1.2.1 (October 20, 2004)

* September 29

- Henrik Stoerner fix: got a report that Tru64 Unix (the unix from Digital
  when they made Alpha's) uses /etc/svc.conf for the purpose fixed below for
  other OSes. He made c-ares check for and understand it if present.

- Now c-ares will use local host name lookup _before_ DNS resolving by default
  if nothing else is told.

* September 26

- Henrik Stoerner: found out that c-ares does not look at the /etc/host.conf
  file to determine the sequence in which to search /etc/hosts and DNS.  So on
  systems where this order is defined by /etc/host.conf instead of a "lookup"
  entry in /etc/resolv.conf, c-ares will always default to looking in DNS
  first, and /etc/hosts second.

  c-ares now looks at

  1) resolv.conf (for the "lookup" line);