@@ -4,7 +4,7 @@ ares_gethostbyaddr.c ares_send.c ares__read_line.c ares_gethostbyname.c	   \
 ares_strerror.c ares_cancel.c ares_init.c ares_timeout.c ares_destroy.c	   \
 ares_mkquery.c ares_version.c ares_expand_name.c ares_parse_a_reply.c	   \
 windows_port.c ares_expand_string.c ares_parse_ptr_reply.c                 \
-ares_parse_aaaa_reply.c inet_net_pton.c bitncmp.c
+ares_parse_aaaa_reply.c inet_net_pton.c bitncmp.c inet_ntop.c
 
 HHEADERS = ares.h ares_private.h setup.h ares_dns.h ares_version.h nameser.h \
            inet_net_pton.h ares_ipv6.h bitncmp.h
